--- a/css/style.css
+++ b/css/style.css
@@ -75,8 +75,8 @@ header {
  
  .trash-btn,
  .complete-btn {
-   background: #dcc69c;
-   color: #dcc69c;
+   background: #cc9838;
+   color: #da6e1b;
    border: none;
    padding: 1rem;
    cursor: pointer;
